# f1quiz

./: CMakeLists.txt  README.md  diskquestiontemplaterepository.cpp  diskquestiontemplaterepository.h  main.cpp  questiontemplatedata.cpp  questiontemplatedata.h  questiontemplatesatarepository.h  quizquestion.cpp  quizquestion.h  quizquestiongenerator.cpp  quizquestiongenerator.h  quizquestiongeneratorusecase.cpp  quizquestiongeneratorusecase.h  readme
res/queries/: queryQuestion1  queryQuestion2  queryQuestion3  queryQuestion4  queryQuestion5
res/question/: question1Table.csv  question2Table.csv  question3Table.csv  question4Table.csv  question5Table.csv  questionTemplate
